--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -1306,7 +1306,7 @@
 		<Translation>{CITY-2} Returns</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_RETURN_CITY_BARBARIAN_TITLE</zType>
+		<zType>TEXT_EVENTSTORY_RETURN_CITY_TRIBE_TITLE</zType>
 		<Translation>{CITY-2} Returns</Translation>
 	</Entry>
 	<Entry>
@@ -3502,7 +3502,7 @@
 		<Translation>Surprise Proposal</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_RELATIONSHIP_BARBARIAN_HUNT_TITLE</zType>
+		<zType>TEXT_EVENTSTORY_RELATIONSHIP_TRIBE_HUNT_TITLE</zType>
 		<Translation>{BARBARIAN-0,1} Jagd</Translation>
 	</Entry> 
 	<Entry>
@@ -3974,8 +3974,8 @@
 		<Translation>A Delicate Matter</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_TRAIT_BARBARIAN_BRIDE_TITLE</zType>
-		<Translation>Barbarian {G2:Groom:Bride}</Translation>
+		<zType>TEXT_EVENTSTORY_TRAIT_TRIBE_BRIDE_TITLE</zType>
+		<Translation>{TRIBE-1,1} {G2:Groom:Bride}</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_STUDY_CINNABAR_TRAGEDIES_TITLE</zType>
@@ -5158,11 +5158,11 @@
 		<Translation>Kataphrakten Söldner</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_PILLAGING_BARBARIANS_TITLE</zType>
-		<Translation>Plündernde Barbaren</Translation>
+		<zType>TEXT_EVENTSTORY_PILLAGING_TRIBE_TITLE</zType>
+		<Translation>Plündernde Stämme</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_PILLAGING_BARBARIANS_SUCCESS_TITLE</zType>
+		<zType>TEXT_EVENTSTORY_PILLAGING_TRIBE_SUCCESS_TITLE</zType>
 		<Translation>Rache ist süß</Translation>
 	</Entry>
 	<Entry>
@@ -6046,8 +6046,8 @@
 		<Translation>Silver Linings</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_INFILTRATION_CAPTURED_BY_BARBARIANS_TITLE</zType>
-		<Translation>Captured by Barbarians</Translation>
+		<zType>TEXT_EVENTSTORY_INFILTRATION_CAPTURED_BY_TRIBE_TITLE</zType>
+		<Translation>Gefangengenommen von einem Stamm</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_INFILTRATION_NOBLES_ABROAD_TITLE</zType>
@@ -6338,8 +6338,8 @@
 		<Translation>Unearthed</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_INFLUENCE_THE_BARBARIAN_UNLEASHED_TITLE</zType>
-		<Translation>The {BARBARIAN-2}, Unleashed</Translation>
+		<zType>TEXT_EVENTSTORY_INFLUENCE_THE_TRIBE_UNLEASHED_TITLE</zType>
+		<Translation>The {TRIBE-2}, Unleashed</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_INFLUENCE_LOCAL_AUTHORITY_TITLE</zType>
@@ -6482,8 +6482,8 @@
 		<Translation>Tutorial: link(UNIT_WARRIOR) ausgewählt</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_TUTORIAL_BARBARIAN_CAMP_CLEARED_TITLE</zType>
-		<Translation>Tutorial: Barbarian Camp Cleared</Translation>
+		<zType>TEXT_EVENTSTORY_TUTORIAL_TRIBE_CAMP_CLEARED_TITLE</zType>
+		<Translation>Tutorial: Tribe Site Cleared</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_TUTORIAL_CITY_CAPTURED_TITLE</zType>
@@ -6530,8 +6530,8 @@
 		<Translation>Tutorial: Ambition</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_TUTORIAL_BARBARIANS_TITLE</zType>
-		<Translation>Tutorial: Barbarians</Translation>
+		<zType>TEXT_EVENTSTORY_TUTORIAL_TRIBES_TITLE</zType>
+		<Translation>Tutorial: Tribes</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_TUTORIAL_SUCCESSION_TITLE</zType>
